Shruthi, Banka | #000 | Fixed surefire and failsafe plugin configuration