@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject</groupId>
     <artifactId>whp-tb</artifactId>
@@ -8,7 +9,7 @@
     <name>whp-tb</name>
 
     <modules>
-        <module>whp.adherence</module>
+        <module>whp-adherence</module>
     </modules>
 
     <repositories>
@@ -35,7 +36,7 @@
             <id>motech.nexus</id>
             <name>MoTeCH Releases Repository</name>
             <url>http://nexus.motechproject.org/content/repositories/releases</url>
-	        <uniqueVersion>false</uniqueVersion>
+            <uniqueVersion>false</uniqueVersion>
         </repository>
         <snapshotRepository>
             <id>motech.nexus</id>
@@ -68,11 +69,6 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
-        </dependency>
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -167,6 +163,24 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.9</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!--Drop all DBs-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -203,20 +217,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <!--Unit and Integration tests-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=1024M -ea</argLine>
-                    <printSummary>true</printSummary>
-                    <includes>
-                        <include>**/*Test*.java</include>
-                        <include>**/*IT.java</include>
-                    </includes>
-                </configuration>
             </plugin>
             <!--IDE-->
             <plugin>
@@ -255,37 +255,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <profiles>
-        <profile>
-            <id>IT</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>2.9</version>
-                        <configuration>
-                            <encoding>UTF-8</encoding>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>integration-test</id>
-                                <goals>
-                                    <goal>integration-test</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>verify</id>
-                                <goals>
-                                    <goal>verify</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
 </project>
